<?xml version="1.0"?>
<package format="2">
    <name>tron2_gazebo</name>
    <version>0.0.0</version>
    <description>Gazebo simulation plugin for TRON2 biped robot (SF/WF).</description>
    <maintainer email="dev@example.com">developer</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>gazebo_dev</depend>
    <depend>gazebo_ros_control</depend>
    <depend>hardware_interface</depend>
    <depend>realtime_tools</depend>
    <depend>robot_common</depend>
    <depend>limxsdk_sim</depend>
    <export>
        <gazebo_ros_control plugin="${prefix}/tron2_hw_sim_plugins.xml"/>
    </export>
</package>
